--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">人脸识别</string>
+    <string name="login">登录界面</string>
+    <string name="loginButton">登陆</string>
+    <string name="id">请输入登录帐号</string>
+    <string name="password">请输入帐号密码</string>
     <string name="title_activity_user_detail_acitivity">UserDetailAcitivity</string>
 </resources>
